(feat) add placeholder d3graph and reactgraph components

--- a/client/src/graph.html
+++ b/client/src/graph.html
@@ -2,7 +2,6 @@
   <head>
     <title>BaseBranch Graph</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="../d3.min.js"></script>
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
@@ -21,6 +20,8 @@
 
       <!-- build:js -->
       <script type="text/jsx" src="js/components/NavBar.jsx"></script>
+      <script type="text/jsx" src="js/components/D3Graph.jsx"></script>
+      <script type="text/jsx" src="js/components/ReactGraph.jsx"></script>
       <script type="text/jsx" src="js/components/GraphBar.jsx"></script>
       <script type="text/jsx" src="js/components/GraphSideBar.jsx"></script>
       <script type="text/jsx" src="js/components/GraphView.jsx"></script>
